fix: z-index cleaning

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,12 +6,12 @@
   transition: left 0.5s;
   top: 0px;
   left: -70%;
-  z-index: 1000;
+  z-index: 1;
 }
 
 .wrapper.is-nav-open {
   left: 0px;
-  z-index: 1001;
+  z-index: 2;
 }
 
 .nav {
